--- a/getTest.html
+++ b/getTest.html
@@ -1,12 +1,12 @@
 <html>
 	<body>
-		<div>
+		<module-one>
 			<ul>
 				<li> clothes</li>
 				<li>shoes</li>
 				<li>makeup</li>
 				<li>accessories</li>
 			</ul>
-		</div>
+		</module-one>
 	</body>
 </html>
